# epub-reader

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
patches/: foliate-js@0.0.0.patch
src/: App.tsx  bookDefaults.ts  index.css  main.tsx  polyfill.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/plugins/tauri-plugin-native-bridge/: Cargo.toml  build.rs
src-tauri/plugins/tauri-plugin-native-bridge/android/: build.gradle.kts
src-tauri/plugins/tauri-plugin-native-bridge/android/src/main/java/: NativeBridgePlugin.kt
src-tauri/plugins/tauri-plugin-native-bridge/permissions/autogenerated/: reference.md
src-tauri/plugins/tauri-plugin-native-bridge/permissions/schemas/: schema.json
src-tauri/plugins/tauri-plugin-native-bridge/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
src-tauri/src/: lib.rs
src/components/: AppErrorBoundary.css  AppErrorBoundary.tsx  BookActionSheet.css  BookActionSheet.tsx  BookCard.css  BookCard.tsx  BookDetailsSheet.css  BookDetailsSheet.tsx  BottomSheet.css  BottomSheet.tsx  EpubViewer.tsx  EpubViewerV2.tsx  ErrorBlock.css  ErrorBlock.tsx  ReaderNav.css  ReaderNav.tsx  ScreenHeader.css  ScreenHeader.tsx  SettingsSheet.tsx  Snackbar.css  Snackbar.tsx  Spinner.tsx  TableOfContents.css  TableOfContents.tsx  TocSheet.tsx
src/hooks/: useEpub.ts  useRendition.ts  useSafeAreaInsets.ts
src/screens/: LibraryScreen.css  LibraryScreen.tsx  ReaderScreen.tsx
src/services/: documentLoader.ts  (+4 more)
(+14 files in other folders)
