[package]
name = "tauri-plugin-native-bridge"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-native-bridge"

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
schemars = "0.8"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
schemars = "0.8"
